ant: added ecj example

--- a/ant/Makefile
+++ b/ant/Makefile
@@ -1,5 +1,8 @@
 all:
 	ant -f hello.xml compile
 
+ecj:
+	CLASSPATH=/usr/share/java/ant-eclipse-ecj.jar:/usr/share/java/ecj.jar ant -f hello.xml compile
+
 clean:
 	rm -f *.class
