--- a/python/cgi/pyrssi/Makefile
+++ b/python/cgi/pyrssi/Makefile
@@ -1,3 +1,10 @@
+doc: HEADER.html
+
+HEADER.html: README
+	ln -s README HEADER.txt
+	asciidoc -a toc -a numbered -a sectids HEADER.txt
+	rm HEADER.txt
+
 dist:
-	darcs changes . > ChangeLog
+	git log --no-merges . |git name-rev --tags --stdin >ChangeLog
 	tar czf pyrssi.tar.gz .htaccess pyrssi.py README socket-interface.pl ChangeLog
