waphup: rewrite in python. not fully functional but basically works

--- a/php/waphup/.htaccess
+++ b/php/waphup/.htaccess
@@ -1,4 +1,3 @@
-RewriteEngine on
-RewriteCond %{REQUEST_URI} !^/~vmiklos/waphup/_darcs/
-RewriteCond %{REQUEST_URI} !^/~vmiklos/waphup/index.php
-RewriteRule (.*) /~vmiklos/waphup/index.php/$1
+AddHandler mod_python .py
+DirectoryIndex waphup.py
+PythonHandler waphup
