net/pci: import example

--- a/eth/Makefile
+++ b/eth/Makefile
@@ -1,1 +1,6 @@
-all: driver
+CFLAGS += -I/usr/include/pci -ggdb
+LDFLAGS += -lpci -lz
+all: driver pci
+
+pci: pci.c
+	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
