ly: make makefile a bit more generic

--- a/ly/Makefile
+++ b/ly/Makefile
@@ -1,15 +1,32 @@
-cantina-band.ogg: cantina-band.midi
+SOURCES = $(wildcard *.txt)
+TARGETS = $(subst .txt,.ogg,$(SOURCES))
+
+-include .depend
+
+.depend:
+	: > .depend
+	for i in $(subst .txt,,$(SOURCES)); do \
+		echo -e "$$i.ogg: $$i.midi\n\
+$$i.midi: $$i.pdf\n\
+$$i.pdf: $$i.ly\n\
+$$i.ly: $$i.html\n\
+$$i.html: $$i.txt" >> .depend; \
+	done
+
+all: $(TARGETS)
+
+%.ogg: %.midi
 	timidity -o $@ -Ov $<
 
-cantina-band.midi: cantina-band.pdf
+%.midi: %.pdf
 
-cantina-band.pdf: cantina-band.ly
+%.pdf: %.ly
 	lilypond --pdf $<
 
-cantina-band.ly: cantina-band.html
+%.ly: %.html
 
-cantina-band.html: cantina-band.txt
+%.html: %.txt
 	asciidoc $<
 
 clean:
-	rm -f *.html *.ly *.midi *.pdf *.png *.ps *.ogg
+	rm -f .depend *.html *.ly *.midi *.pdf *.png *.ps *.ogg
