--- a/lib/foo/Makefile
+++ b/lib/foo/Makefile
@@ -1,4 +1,4 @@
-CFLAGS ?= -Wall -march=i686 -O2 -pipe
-LDFLAGS = -lfoo
+CFLAGS ?= -Wall -march=i686 -O2 -pipe -I../libfoo
+LDFLAGS = -L../libfoo -lfoo
 
 all: foo
