okular: add vol-/vol+ configs

--- a/anyremote/okular.cfg
+++ b/anyremote/okular.cfg
@@ -74,10 +74,16 @@ QUIT=Macro(GETPID);\
 4=Macro(GETPID);\
 	Exec(echo 'if [ "x$(okular_pid)" != "x" ]; then dbus-send --type=method_call --dest=org.kde.okular-$(okular_pid) /okular org.kde.okular.slotPreviousPage; fi'|bash -f -s)
 
+VOL+=Macro(GETPID);\
+	Exec(echo 'if [ "x$(okular_pid)" != "x" ]; then dbus-send --type=method_call --dest=org.kde.okular-$(okular_pid) /okular org.kde.okular.slotPreviousPage; fi'|bash -f -s)
+
 5=Macro(GETPID);\
 	Exec(echo 'if [ "x$(okular_pid)" != "x" ]; then dbus-send --type=method_call --dest=org.kde.okular-$(okular_pid) /okular org.kde.okular.slotTogglePresentation; fi'|bash -f -s)
 
 6=Macro(GETPID);\
+	Exec(echo 'if [ "x$(okular_pid)" != "x" ]; then dbus-send --type=method_call --dest=org.kde.okular-$(okular_pid) /okular org.kde.okular.slotNextPage; fi'|bash -f -s)
+
+VOL-=Macro(GETPID);\
 	Exec(echo 'if [ "x$(okular_pid)" != "x" ]; then dbus-send --type=method_call --dest=org.kde.okular-$(okular_pid) /okular org.kde.okular.slotNextPage; fi'|bash -f -s)
 
 7=Make(none)
