--- a/libreoffice/cpp-uno/Makefile
+++ b/libreoffice/cpp-uno/Makefile
@@ -4,19 +4,15 @@ SP +=
 
 ifneq ($(OS),Windows_NT)
 LO_HOME = /opt/libreoffice
-OO_SDK_NAME = libreoffice$(shell grep ProductKey $(LO_HOME)/program/bootstraprc|sed 's/ProductKey=LibreOffice //')_sdk
 DEFINES = -DLINUX -DUNX -DCPPU_ENV=gcc3
 INCLUDES = -I$(LO_HOME)/sdk/include -I$(WORKDIR)
-LIBS = -L$(LO_HOME)/sdk/lib -L$(LO_HOME)/ure/lib -Wl,-rpath,$(LO_HOME)/ure/lib -luno_cppuhelpergcc3 -luno_cppu -luno_salhelpergcc3 -luno_sal -lxmlreader
-ifneq ($(findstring 4.0,$(OO_SDK_NAME)),4.0)
-LIBS += -lreg -lunoidl -lstore
-endif
+LIBS = -L$(LO_HOME)/sdk/lib -L$(LO_HOME)/ure/lib -Wl,-rpath,$(LO_HOME)/ure/lib -luno_cppuhelpergcc3 -luno_cppu -luno_salhelpergcc3 -luno_sal
 
 test: test.cxx $(WORKDIR)/com/sun/star/uno/Exception.hpp Makefile
 	g++ -Wall -o test $(DEFINES) $(INCLUDES) $(LIBS) test.cxx
 
 $(WORKDIR)/com/sun/star/uno/Exception.hpp:
-	$(LO_HOME)/sdk/bin/cppumaker -Gc $(if $(findstring 4.0,$(OO_SDK_NAME)),-BUCR) -O./$(WORKDIR) $(LO_HOME)/ure/share/misc/types.rdb $(LO_HOME)/program/types/offapi.rdb
+	$(LO_HOME)/sdk/bin/cppumaker -Gc -O./$(WORKDIR) $(LO_HOME)/ure/share/misc/types.rdb $(LO_HOME)/program/types/offapi.rdb
 
 run: test
 	./test -env:URE_MORE_TYPES="file://$(LO_HOME)/program/types/offapi.rdb" "file://$(LO_HOME)/sdk/examples/cpp/DocumentLoader/test.odt"
