import find-unsorted-includes

--- a/libreoffice/Makefile
+++ b/libreoffice/Makefile
@@ -1,2 +1,2 @@
 check:
-	pep8 --ignore=E501 includetools.py find-unneeded-includes
+	pep8 --ignore=E501 includetools.py find-unneeded-includes find-unsorted-includes
