--- a/cmake/Makefile
+++ b/cmake/Makefile
@@ -1,6 +1,6 @@
 all:
 	@mkdir -p workdir
-	cd workdir && cmake -DCMAKE_INSTALL_PREFIX:PATH=$(PWD)/instdir -DCMAKE_BUILD_TYPE=Debug .. && $(MAKE) install
+	cd workdir && cmake -DCMAKE_INSTALL_PREFIX:PATH=$(PWD)/instdir -DCMAKE_BUILD_TYPE=Debug .. && $(MAKE) $(if $(verbose)$(VERBOSE),VERBOSE=1) install
 
 clean:
 	rm -rf instdir
