gl: fix LDFLAGS

--- a/gl/4/Makefile
+++ b/gl/4/Makefile
@@ -1,8 +1,11 @@
-CXXFLAGS += -g -Wall -Werror -DDEBUG
-LDFLAGS += -lGL -lglut -lm
+CXXFLAGS += -g -Wall -Werror
+LDFLAGS += -lGL -lGLU -lglut -lm
 
 run: hazi
 	./hazi
 
 gdb: hazi
 	gdb ./hazi
+
+clean:
+	rm -f hazi
