osm: import osmose test
currently fails, so not yet part of 'make check'

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -8,5 +8,9 @@ update-house-numbers:
 	@mkdir -p workdir
 	./overpass-query region-street-housenumbers.txt > workdir/street-housenumbers.csv
 
+update-osmose-$(USER):
+	@mkdir -p workdir
+	curl -o workdir/osmose-$(USER).rss http://osmose.openstreetmap.fr/en/byuser/$(USER).rss
+
 check:
-	pep8 overpass-query qa/houseless-streets.py
+	pep8 overpass-query qa/houseless-streets.py qa/osmose.py
