osm: download osmose by default

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -1,4 +1,4 @@
-download: update-streets update-house-numbers
+download: update-streets update-house-numbers update-osmose-$(USER)
 
 update-streets:
 	@mkdir -p workdir
