cmake: add cygwin support

--- a/cmake/Makefile
+++ b/cmake/Makefile
@@ -1,6 +1,11 @@
 all:
 	@mkdir -p workdir
-	cd workdir && cmake -DCMAKE_INSTALL_PREFIX:PATH=$(PWD)/instdir -DCMAKE_BUILD_TYPE=Debug .. && $(MAKE) $(if $(verbose)$(VERBOSE),VERBOSE=1) install
+ifneq ($(OS),Windows_NT)
+	cd workdir && cmake -DCMAKE_INSTALL_PREFIX:PATH=$(PWD)/instdir -DCMAKE_BUILD_TYPE=Debug ..
+else
+	cd workdir && cmake -DCMAKE_INSTALL_PREFIX:PATH=$(shell cygpath -m $(PWD))/instdir -DCMAKE_BUILD_TYPE=Debug ..
+endif
+	cd workdir && cmake --build . --target install
 
 clean:
 	rm -rf instdir
