osm: always download before check

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -12,6 +12,6 @@ update-osmose-$(USER):
 	@mkdir -p workdir
 	curl -o workdir/osmose-$(USER).rss http://osmose.openstreetmap.fr/en/byuser/$(USER).rss
 
-check:
+check: download
 	pep8 overpass-query qa/houseless-streets.py qa/osmose.py
 	qa/osmose.py
