--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,2 +1,5 @@
 json: json.cc Makefile
 	g++ -std=c++11 -o json json.cc
+
+json-array-read: json-array-read.cc Makefile
+	g++ -std=c++11 -o json-array-read json-array-read.cc
