--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -3,3 +3,6 @@ json: json.cc Makefile
 
 json-array-read: json-array-read.cc Makefile
 	g++ -std=c++11 -o json-array-read json-array-read.cc
+
+poco: poco.cc Makefile
+	g++ -std=c++11 -o poco poco.cc -lPocoFoundation -lPocoJSON
