autotools: use ccache automatically

--- a/autotools/configure.ac
+++ b/autotools/configure.ac
@@ -5,6 +5,13 @@ AC_CONFIG_FILES([
     Makefile
     source/Makefile
 ])
+
+dnl Use ccache automatically.
+AC_PATH_PROG([CCACHE],[ccache],[not found])
+if test "$CCACHE" != "not found"; then
+    CXX="$CCACHE $CXX"
+fi
+
 AC_OUTPUT
 
 dnl vim:set shiftwidth=4 softtabstop=4 expandtab:
