clang: add gcov wrapper

--- a/clang/Makefile
+++ b/clang/Makefile
@@ -1,2 +1,5 @@
+CLANGDIR= $(HOME)/git/libreoffice/dev-tools/clang
 check:
+	rm -f $(CLANGDIR)/bin/rename
+	make -C $(CLANGDIR) GCOV=y bin/rename
 	qa/test-rename.sh
