--- a/clang/Makefile
+++ b/clang/Makefile
@@ -1,5 +1,13 @@
 CLANGDIR= $(HOME)/git/libreoffice/dev-tools/clang
 check:
+	rm -f bin lib64
+	ln -s $(CLANGDIR)/bin
+	ln -s $(CLANGDIR)/lib64
+	qa/test-rename.sh
+
+coverage:
 	rm -f $(CLANGDIR)/bin/rename
 	make -C $(CLANGDIR) GCOV=y bin/rename
-	qa/test-rename.sh
+	make check
+	lcov --directory $(CLANGDIR) --gcov-tool $(PWD)/qa/llvm-gcov.sh --capture --output-file clang.info
+	genhtml -o coverage clang.info
