cpp: add scope guard example

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -15,3 +15,6 @@ python-filter: python-filter.cxx Makefile
 
 python-map: python-map.cxx Makefile
 	g++ -std=c++11 -o python-map python-map.cxx
+
+scope-guard: scope-guard.cxx Makefile
+	g++ -std=c++11 -o scope-guard scope-guard.cxx
