libclang: more completion stuff

--- a/libclang/Makefile
+++ b/libclang/Makefile
@@ -5,3 +5,6 @@ completion: completion.cxx Makefile
 
 get-current-function: get-current-function.cxx Makefile
 	clang++ $(FLAGS) -o get-current-function get-current-function.cxx
+
+test:
+	./completion test-completion.cxx 25 7 -std=c++1y
