Rewrite get-compilar-args in C++
Mainly because this way it can be included in libclang-vim in the long
run.

--- a/libclang/Makefile
+++ b/libclang/Makefile
@@ -1,5 +1,8 @@
 FLAGS := $(shell llvm-config --cxxflags --ldflags) -lclang -O0 -g -D_GLIBCXX_DEBUG
 
+get-compiler-args: get-compiler-args.cxx Makefile
+	clang++ $(FLAGS) -o get-compiler-args get-compiler-args.cxx
+
 get-completion-at: get-completion-at.cxx Makefile
 	clang++ $(FLAGS) -o get-completion-at get-completion-at.cxx
 
