make-dep: improve example to cover multiple directories

--- a/make-dep/Makefile
+++ b/make-dep/Makefile
@@ -1,40 +1,31 @@
-all: hello hello2
+all: hello/hello hello2/hello2
 
-hello_objects = lib.o main.o
-hello: CXXFLAGS += -DFOO
-hello: $(hello_objects)
+hello_objects = hello/lib.o hello/main.o
+hello/hello: $(hello_objects)
 	$(LINK.cpp) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
-hello2_objects = lib2.o main2.o
-hello2: CXXFLAGS += -DBAR
-hello2: $(hello2_objects)
+hello2_objects = hello2/lib2.o hello2/main2.o
+hello2/hello2: $(hello2_objects)
 	$(LINK.cpp) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 all_objects = $(hello_objects) $(hello2_objects)
 SRCS = $(patsubst %.o,%.cxx,$(all_objects))
 
 DEPDIR := .d
-$(shell mkdir -p $(DEPDIR) >/dev/null)
+$(shell mkdir -p $(DEPDIR)/hello{,2} >/dev/null)
 DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPDIR)/$*.Td
 
-COMPILE.c = $(CC) $(DEPFLAGS) $(CFLAGS) $(CPPFLAGS) $(TARGET_ARCH) -c
 COMPILE.cc = $(CXX) $(DEPFLAGS) $(CXXFLAGS) $(CPPFLAGS) $(TARGET_ARCH) -c
-POSTCOMPILE = mv -f $(DEPDIR)/$*.Td $(DEPDIR)/$*.d
 
-%.o : %.c
-%.o : %.c $(DEPDIR)/%.d
-	$(COMPILE.c) $(OUTPUT_OPTION) $<
-	$(POSTCOMPILE)
+hello/%.o : hello/%.cxx
+hello/%.o : hello/%.cxx $(DEPDIR)/hello/%.d
+	$(COMPILE.cc) -DFOO $(OUTPUT_OPTION) $<
+	mv -f $(DEPDIR)/$*.Td $(DEPDIR)/hello/$*.d
 
-%.o : %.cc
-%.o : %.cc $(DEPDIR)/%.d
-	$(COMPILE.cc) $(OUTPUT_OPTION) $<
-	$(POSTCOMPILE)
-
-%.o : %.cxx
-%.o : %.cxx $(DEPDIR)/%.d
-	$(COMPILE.cc) $(OUTPUT_OPTION) $<
-	$(POSTCOMPILE)
+hello2/%.o : hello2/%.cxx
+hello2/%.o : hello2/%.cxx $(DEPDIR)/hello2/%.d
+	$(COMPILE.cc) -DBAR $(OUTPUT_OPTION) $<
+	mv -f $(DEPDIR)/$*.Td $(DEPDIR)/hello2/$*.d
 
 $(DEPDIR)/%.d: ;
 .PRECIOUS: $(DEPDIR)/%.d
